               adjustments in constraints for rcsb_entry_info category production
30-Nov-2018    V0.29 branch birdconsolidate includes mashup of all BIRD definition data, additional content
               types in current repository holdings with adjustments to filter obsolete entries, various
               additional categories added to core entry collection.
 1-Dec-2018    V0.30  Adjustments for roundtrip CI/CD
 2-Dec-2018    V0.31 Fixes for expansion of semi-colon separated value types, add methods to
               include NCBI scientific and common names.
 3-Dec-2018    V0.32 interim update for troubleshooting entity collection load issues, adding search indices
               for core collections, adding optional private identifier chemical component identifiers for non-polymer
               entities, adjustments to bird core citation schema.
 9-Dec-2018    V0.33 Add _pdbx_reference_molecule.class, _pdbx_reference_molecule.type, Add categories drugbank_info
               and drugbank_target, add method rcsb_add_bird_entity_identifiers, add  _rcsb_entry_info.solvent_entity_count
               and adjust counts to include solvent.  Add consolidated loader for BIRD data, add loader for DrugBank
               corresponding data from rcsb.utils.chemref.    Add CLI option for loading integrated chemical reference data.
               Move time consuming schema validation tests to seperate subdirectory.  Add mandatory option for injected
               private keys.  Resolve schema loading issues with current chemical component and BIRD definitions.
 12-Dec-2018   V0.34 Add rcsb_entity_id identifiers in categories struct_ref_seq and struct_ref_seq_dif.Add category rcsb_entity_poly_info
               as the basis for a new core collection core_entity_monomer. Adjust logic for reporting assembly format availibility.
 13-Dec-2018   V0.35 Add ihm_dev collection and support for I/HM repository model files
##
